--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ dm-2024-isa-5810-lab-2-homework/data_identification.csv
 dm-2024-isa-5810-lab-2-homework/emotion.csv
 dm-2024-isa-5810-lab-2-homework/sampleSubmission.csv
 dm-2024-isa-5810-lab-2-homework/tweets_DM.json
+GoogleNews/GoogleNews-vectors-negative300.bin.gz
+Screenshot 2024-11-14 at 4.41.39 PM copy.png
